--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Intsall Golangci-lint 
       run: curl -sfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh| sh -s -- -b . latest
     - name: Lint
-      run: ./golangci-lint run --skip-dirs=".git|.github" --timeout=5m --disable=unused
+      run: ./golangci-lint run --skip-dirs=".git|.github" --timeout=5m
       
   test:
     name: Unit Testing
